[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/level/GameGUI.gd" type="Script" id=1]
[ext_resource path="res://assets/level/stamina_bar.png" type="Texture" id=2]
[ext_resource path="res://assets/level/stamina_bar_empty.png" type="Texture" id=3]

[node name="GUI" type="CanvasLayer" groups=[
"GUI",
]]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="Control/VBoxContainer"]
margin_right = 1014.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LivesAndAxeContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 4.0
margin_right = 1014.0
margin_bottom = 4.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LivesContainer" type="HBoxContainer" parent="Control/VBoxContainer/LivesAndAxeContainer"]

[node name="Expand" type="Control" parent="Control/VBoxContainer/LivesAndAxeContainer"]
size_flags_horizontal = 2
size_flags_vertical = 0

[node name="AxeContainer" type="HBoxContainer" parent="Control/VBoxContainer/LivesAndAxeContainer"]
margin_left = 1014.0
margin_right = 1014.0

[node name="StaminaMeter" type="TextureProgress" parent="Control/VBoxContainer"]
margin_top = 8.0
margin_right = 1014.0
margin_bottom = 28.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 32.0
margin_right = 1014.0
margin_bottom = 32.0
